--- a/scripts/telephone_ cleanning_Script.Rmd
+++ b/scripts/telephone_ cleanning_Script.Rmd
@@ -75,11 +75,11 @@ bsi <-
       across(
         .cols = c(bsi1:bsi19),
         .fns = ~case_when(
-         .x == "Not at all" ~ "1",
-         .x == "A little bit" ~ "2",
-         .x == "Moderately" ~ "3",
-         .x == "Quite a bit" ~ "4",
-         .x == "Very much" ~ "5",
+         .x == "Not at all" ~ "0",
+         .x == "A little bit" ~ "1",
+         .x == "Moderately" ~ "2",
+         .x == "Quite a bit" ~ "3",
+         .x == "Very much" ~ "4",
          .x == "Decline to Answer" ~ "-77",
          TRUE ~ .x
         )
@@ -2181,12 +2181,12 @@ itq_complete <-
     scale3 = c("itq5", "itq6")
   ) %>%
   rename(
-    itq_ad_total = total1,
-    itq_nsc_total = total2,
-    itq_dr_total = total3
+    itq_re_total = total1,
+    itq_av_total = total2,
+    itq_th_total = total3
   ) %>%
   mutate(
-    itq_dso = (itq_ad_total + itq_nsc_total + itq_dr_total),
+    itq_ptsd_total = (itq_re_total + itq_av_total + itq_th_total),
     across(
       -c(id
       ),
@@ -3976,10 +3976,95 @@ sus_miss <- sus %>%
 
 ## PCL 
 ### PCL Select Variabl and Recode 
-Min's question: Should I rename the columns? what should I code NA to - they are not nesssely missing; should I identify NA manually (eg. if pcl1_1, pcl1_2, pcl1_3, pcl1_4 are all NAs)
+Min's question: Should I rename the columns? what should I code NA to - they are not necessaryly missing; should I identify NA manually (eg. if pcl1_1, pcl1_2, pcl1_3, pcl1_4 are all NAs)
 ```{r plc}
 pcl <- tpw_raw %>%
   select(id, starts_with("pcl")) %>%
+  mutate(pcl1_dev = combine_columns(., c("pcl1a_1", "pcl1a_2", "pcl1a_3", "pcl1a_4"), sep = ";") )%>%
+  mutate(pcl1_dev = str_extract(pcl1_dev, "^[^;]+")) %>%
+  relocate(pcl1_dev, .after = "pcl1a_77") %>%
+  mutate(pcl2_dev = combine_columns(., c("pcl2a_1", "pcl2a_2", "pcl2a_3", "pcl2a_4"), sep = ";") )%>%
+  mutate(pcl2_dev = str_extract(pcl2_dev, "^[^;]+")) %>%
+  relocate(pcl2_dev, .after = "pcl2a_77") %>%
+  mutate(pcl3_dev = combine_columns(., c("pcl3a_1", "pcl3a_2", "pcl3a_3", "pcl3a_4"), sep = ";") )%>%
+  mutate(pcl3_dev = str_extract(pcl3_dev, "^[^;]+")) %>%
+  relocate(pcl3_dev, .after = "pcl3a_77") %>%
+  mutate(pcl4_dev = combine_columns(., c("pcl4a_1", "pcl4a_2", "pcl4a_3", "pcl4a_4"), sep = ";") )%>%
+  mutate(pcl4_dev = str_extract(pcl4_dev, "^[^;]+")) %>%
+  relocate(pcl4_dev, .after = "pcl4a_77") %>%
+  mutate(pcl5_dev = combine_columns(., c("pcl5a_1", "pcl5a_2", "pcl5a_3", "pcl5a_4"), sep = ";") )%>%
+  mutate(pcl5_dev = str_extract(pcl5_dev, "^[^;]+")) %>%
+  relocate(pcl5_dev, .after = "pcl5a_77") %>%
+  mutate(pcl6_dev = combine_columns(., c("pcl6a_1", "pcl6a_2", "pcl6a_3", "pcl6a_4"), sep = ";") )%>%
+  mutate(pcl6_dev = str_extract(pcl6_dev, "^[^;]+")) %>%
+  relocate(pcl6_dev, .after = "pcl6a_77") %>%
+  mutate(pcl7_dev = combine_columns(., c("pcl7a_1", "pcl7a_2", "pcl7a_3", "pcl7a_4"), sep = ";") )%>%
+  mutate(pcl7_dev = str_extract(pcl7_dev, "^[^;]+")) %>%
+  relocate(pcl7_dev, .after = "pcl7a_77") %>%
+  mutate(pcl8_dev = combine_columns(., c("pcl8a_1", "pcl8a_2", "pcl8a_3", "pcl8a_4"), sep = ";") )%>%
+  mutate(pcl8_dev = str_extract(pcl8_dev, "^[^;]+")) %>%
+  relocate(pcl8_dev, .after = "pcl8a_77") %>%
+  mutate(pcl9_dev = combine_columns(., c("pcl9a_1", "pcl9a_2", "pcl9a_3", "pcl9a_4"), sep = ";") )%>%
+  mutate(pcl9_dev = str_extract(pcl9_dev, "^[^;]+")) %>%
+  relocate(pcl9_dev, .after = "pcl9a_77") %>%
+  mutate(pcl10_dev = combine_columns(., c("pcl10a_1", "pcl10a_2", "pcl10a_3", "pcl10a_4"), sep = ";") )%>%
+  mutate(pcl10_dev = str_extract(pcl10_dev, "^[^;]+")) %>%
+  relocate(pcl10_dev, .after = "pcl10a_77") %>%
+  mutate(pcl11_dev = combine_columns(., c("pcl11a_1", "pcl11a_2", "pcl11a_3", "pcl11a_4"), sep = ";") )%>%
+  mutate(pcl11_dev = str_extract(pcl11_dev, "^[^;]+")) %>%
+  relocate(pcl11_dev, .after = "pcl11a_77") %>%
+  mutate(pcl12_dev = combine_columns(., c("pcl12a_1", "pcl12a_2", "pcl12a_3", "pcl12a_4"), sep = ";") )%>%
+  mutate(pcl12_dev = str_extract(pcl12_dev, "^[^;]+")) %>%
+  relocate(pcl12_dev, .after = "pcl12a_77")
+
+
+# Happened and Witnessed first developed period 
+  # mutate(pcl1_dev = combine_columns(., c("pcl1a_1", "pcl1a_2", "pcl1a_3", "pcl1a_4"), sep = ";") )%>%
+  # mutate(pcl1_dev = str_extract(pcl1_dev, "^[^;]+")) %>%
+  # relocate(pcl1_dev, .after = "pcl1a_77") %>%
+dev_column_names <- paste0("pcl", 1:12, "a_", 1:4)
+pcl <- pcl %>%
+  mutate(across(all_of(dev_column_names), ~str_extract(combine_columns(., across(starts_with(cur_column()), sep = ";")), "^[^;]+")) %>%
+  relocate(paste0(cur_column(), "_dev"), .after = str_replace(cur_column(), "a_", "a_77")) )
+
+pcl <- pcl %>%
+  mutate(
+    across(
+      # had you experienced and how
+      .cols = c(matches("^pcl\\d+_\\d+")),
+      .fns = ~case_when(
+        .x == "Happened to me" ~ "1",
+        .x == "Witnessed it" ~ "1",
+        .x == "Learned about it" ~ "1",
+        ## Because Not Happen will be in its own column, so coded as 1 to indicate it not happened
+        .x == "No (did not happen)" ~ "1",
+        .x == "Decline to Answer" ~ "-77",
+        TRUE ~ .x
+      )
+    )
+    # ,
+    # across(
+    # .cols = c(matches("^pcl\\d+a_\\d+")),
+    #   .fns = ~case_when(
+    #     .x == "Ages 0-5" ~ "1",
+    #      .x == "Ages 6-11" ~ "1",
+    #      .x == "Ages 12-19" ~ "1",
+    #      .x == "Adulthood" ~ "1",
+    #      .x == "Decline to Answer" ~ "-77",
+    #     TRUE ~ .x
+    #   )
+    # )
+    # ,
+    # across(
+    #   .cols = c(pcl1_1, pcl1_2, pcl1_3),
+    #   .fns = ~case_when(
+    #     pcl1_77 == "-77" ~ "-77",
+    #     pcl1_4 == "0" ~ "0",
+    #     is.na(.x) ~ "0",
+    #     TRUE ~ .x
+    #   )
+  ) %>%
+  #rename column names to reflect what happened to this situation.
   rename_with(
     .fn = ~ gsub("pcl(\\d+)_1", "pcl\\1_happen", .),
     .cols = matches("pcl\\d+_1")
@@ -3991,331 +4076,319 @@ pcl <- tpw_raw %>%
   rename_with(
     .fn = ~ gsub("pcl(\\d+)_3", "pcl\\1_learn", .),
     .cols = matches("pcl\\d+_3")
-  )
-  
-  
-  
-  
-  
-    mutate(
-    pcl1_devperiod = factor(
-      case_when(
-        !is.na(pcl1a_1) & pcl1_1 == "Happened to me" ~ "0-5",
-        is.na(pcl1a_1) & !is.na(pcl1a_2) & pcl1_1 == "Happened to me" ~ "6-11",
-        is.na(pcl1a_1) & is.na(pcl1a_2) & !is.na(pcl1_3) & pcl1_1 == "Happened to me" ~ "12-19",
-        is.na(pcl1a_1) & is.na(pcl1a_2) & is.na(pcl1a_3) & !is.na(pcl1a_4) & pcl1_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl2_devperiod = factor(
-      case_when(
-        !is.na(pcl2a_1) & pcl2_1 == "Happened to me" ~ "0-5",
-        is.na(pcl2a_1) & !is.na(pcl2a_2) & pcl2_1 == "Happened to me" ~ "6-11",
-        is.na(pcl2a_1) & is.na(pcl2a_2) & !is.na(pcl2_3) & pcl2_1 == "Happened to me" ~ "12-19",
-        is.na(pcl2a_1) & is.na(pcl2a_2) & is.na(pcl2a_3) & !is.na(pcl2a_4) & pcl2_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl3_devperiod = factor(
-      case_when(
-        !is.na(pcl3a_1) & pcl3_1 == "Happened to me" ~ "0-5",
-        is.na(pcl3a_1) & !is.na(pcl3a_2) & pcl3_1 == "Happened to me" ~ "6-11",
-        is.na(pcl3a_1) & is.na(pcl3a_2) & !is.na(pcl3_3) & pcl3_1 == "Happened to me" ~ "12-19",
-        is.na(pcl3a_1) & is.na(pcl3a_2) & is.na(pcl3a_3) & !is.na(pcl3a_4) & pcl3_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl4_devperiod = factor(
-      case_when(
-        !is.na(pcl4a_1) & pcl4_1 == "Happened to me" ~ "0-5",
-        is.na(pcl4a_1) & !is.na(pcl4a_2) & pcl4_1 == "Happened to me" ~ "6-11",
-        is.na(pcl4a_1) & is.na(pcl4a_2) & !is.na(pcl4_3) & pcl4_1 == "Happened to me" ~ "12-19",
-        is.na(pcl4a_1) & is.na(pcl4a_2) & is.na(pcl4a_3) & !is.na(pcl4a_4) & pcl4_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl5_devperiod = factor(
-      case_when(
-        !is.na(pcl5a_1) & pcl5_1 == "Happened to me" ~ "0-5",
-        is.na(pcl5a_1) & !is.na(pcl5a_2) & pcl5_1 == "Happened to me" ~ "6-11",
-        is.na(pcl5a_1) & is.na(pcl5a_2) & !is.na(pcl5_3) & pcl5_1 == "Happened to me" ~ "12-19",
-        is.na(pcl5a_1) & is.na(pcl5a_2) & is.na(pcl5a_3) & !is.na(pcl5a_4) & pcl5_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl6_devperiod = factor(
-      case_when(
-        !is.na(pcl6a_1) & pcl6_1 == "Happened to me" ~ "0-5",
-        is.na(pcl6a_1) & !is.na(pcl6a_2) & pcl6_1 == "Happened to me" ~ "6-11",
-        is.na(pcl6a_1) & is.na(pcl6a_2) & !is.na(pcl6_3) & pcl6_1 == "Happened to me" ~ "12-19",
-        is.na(pcl6a_1) & is.na(pcl6a_2) & is.na(pcl6a_3) & !is.na(pcl6a_4) & pcl6_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl7_devperiod = factor(
-      case_when(
-        !is.na(pcl7a_1) & pcl7_1 == "Happened to me" ~ "0-5",
-        is.na(pcl7a_1) & !is.na(pcl7a_2) & pcl7_1 == "Happened to me" ~ "6-11",
-        is.na(pcl7a_1) & is.na(pcl7a_2) & !is.na(pcl7_3) & pcl7_1 == "Happened to me" ~ "12-19",
-        is.na(pcl7a_1) & is.na(pcl7a_2) & is.na(pcl7a_3) & !is.na(pcl7a_4) & pcl7_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl8_devperiod = factor(
-      case_when(
-        !is.na(pcl8a_1) & pcl8_1 == "Happened to me" ~ "0-5",
-        is.na(pcl8a_1) & !is.na(pcl8a_2) & pcl8_1 == "Happened to me" ~ "6-11",
-        is.na(pcl8a_1) & is.na(pcl8a_2) & !is.na(pcl8_3) & pcl8_1 == "Happened to me" ~ "12-19",
-        is.na(pcl8a_1) & is.na(pcl8a_2) & is.na(pcl8a_3) & !is.na(pcl8a_4) & pcl8_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl9_devperiod = factor(
-      case_when(
-        !is.na(pcl9a_1) & pcl9_1 == "Happened to me" ~ "0-5",
-        is.na(pcl9a_1) & !is.na(pcl9a_2) & pcl9_1 == "Happened to me" ~ "6-11",
-        is.na(pcl9a_1) & is.na(pcl9a_2) & !is.na(pcl9_3) & pcl9_1 == "Happened to me" ~ "12-19",
-        is.na(pcl9a_1) & is.na(pcl9a_2) & is.na(pcl9a_3) & !is.na(pcl9a_4) & pcl9_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl10_devperiod = factor(
-      case_when(
-        !is.na(pcl10a_1) & pcl10_1 == "Happened to me" ~ "0-5",
-        is.na(pcl10a_1) & !is.na(pcl10a_2) & pcl10_1 == "Happened to me" ~ "6-11",
-        is.na(pcl10a_1) & is.na(pcl10a_2) & !is.na(pcl10_3) & pcl10_1 == "Happened to me" ~ "12-19",
-        is.na(pcl10a_1) & is.na(pcl10a_2) & is.na(pcl10a_3) & !is.na(pcl10a_4) & pcl10_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl11_devperiod = factor(
-      case_when(
-        !is.na(pcl11a_1) & pcl11_1 == "Happened to me" ~ "0-5",
-        is.na(pcl11a_1) & !is.na(pcl11a_2) & pcl11_1 == "Happened to me" ~ "6-11",
-        is.na(pcl11a_1) & is.na(pcl11a_2) & !is.na(pcl11_3) & pcl11_1 == "Happened to me" ~ "12-19",
-        is.na(pcl11a_1) & is.na(pcl11a_2) & is.na(pcl11a_3) & !is.na(pcl11a_4) & pcl11_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl12_devperiod = factor(
-      case_when(
-        !is.na(pcl12a_1) & pcl12_1 == "Happened to me" ~ "0-5",
-        is.na(pcl12a_1) & !is.na(pcl12a_2) & pcl12_1 == "Happened to me" ~ "6-11",
-        is.na(pcl12a_1) & is.na(pcl12a_2) & !is.na(pcl12_3) & pcl12_1 == "Happened to me" ~ "12-19",
-        is.na(pcl12a_1) & is.na(pcl12a_2) & is.na(pcl12a_3) & !is.na(pcl12a_4) & pcl12_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl13_devperiod = factor(
-      case_when(
-        !is.na(pcl13a_1) & pcl13_1 == "Happened to me" ~ "0-5",
-        is.na(pcl13a_1) & !is.na(pcl13a_2) & pcl13_1 == "Happened to me" ~ "6-11",
-        is.na(pcl13a_1) & is.na(pcl13a_2) & !is.na(pcl13_3) & pcl13_1 == "Happened to me" ~ "12-19",
-        is.na(pcl13a_1) & is.na(pcl13a_2) & is.na(pcl13a_3) & !is.na(pcl13a_4) & pcl13_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl14_devperiod = factor(
-      case_when(
-        !is.na(pcl14a_1) & pcl14_1 == "Happened to me" ~ "0-5",
-        is.na(pcl14a_1) & !is.na(pcl14a_2) & pcl14_1 == "Happened to me" ~ "6-11",
-        is.na(pcl14a_1) & is.na(pcl14a_2) & !is.na(pcl14_3) & pcl14_1 == "Happened to me" ~ "12-19",
-        is.na(pcl14a_1) & is.na(pcl14a_2) & is.na(pcl14a_3) & !is.na(pcl14a_4) & pcl14_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl15_devperiod = factor(
-      case_when(
-        !is.na(pcl15a_1) & pcl15_1 == "Happened to me" ~ "0-5",
-        is.na(pcl15a_1) & !is.na(pcl15a_2) & pcl15_1 == "Happened to me" ~ "6-11",
-        is.na(pcl15a_1) & is.na(pcl15a_2) & !is.na(pcl15_3) & pcl15_1 == "Happened to me" ~ "12-19",
-        is.na(pcl15a_1) & is.na(pcl15a_2) & is.na(pcl15a_3) & !is.na(pcl15a_4) & pcl15_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl16_devperiod = factor(
-      case_when(
-        !is.na(pcl16a_1) & pcl16_1 == "Happened to me" ~ "0-5",
-        is.na(pcl16a_1) & !is.na(pcl16a_2) & pcl16_1 == "Happened to me" ~ "6-11",
-        is.na(pcl16a_1) & is.na(pcl16a_2) & !is.na(pcl16_3) & pcl16_1 == "Happened to me" ~ "12-19",
-        is.na(pcl16a_1) & is.na(pcl16a_2) & is.na(pcl16a_3) & !is.na(pcl16a_4) & pcl16_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl17_devperiod = factor(
-      case_when(
-        !is.na(pcl17a_1) & pcl17_1 == "Happened to me" ~ "0-5",
-        is.na(pcl17a_1) & !is.na(pcl17a_2) & pcl17_1 == "Happened to me" ~ "6-11",
-        is.na(pcl17a_1) & is.na(pcl17a_2) & !is.na(pcl17_3) & pcl17_1 == "Happened to me" ~ "12-19",
-        is.na(pcl17a_1) & is.na(pcl17a_2) & is.na(pcl17a_3) & !is.na(pcl17a_4) & pcl17_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    #TODO: Maria please double check I changed 16 to 18 
-    pcl18_devperiod = factor(
-      case_when(
-        !is.na(pcl18a_1) & pcl18_1 == "Happened to me" ~ "0-5",
-        is.na(pcl18a_1) & !is.na(pcl18a_2) & pcl18_1 == "Happened to me" ~ "6-11",
-        is.na(pcl18a_1) & is.na(pcl18a_2) & !is.na(pcl18_3) & pcl18_1 == "Happened to me" ~ "12-19",
-        is.na(pcl18a_1) & is.na(pcl18a_2) & is.na(pcl18a_3) & !is.na(pcl18a_4) & pcl18_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    ),
-    pcl19_devperiod = factor(
-      case_when(
-        !is.na(pcl19a_1) & pcl19_1 == "Happened to me" ~ "0-5",
-        is.na(pcl19a_1) & !is.na(pcl19a_2) & pcl19_1 == "Happened to me" ~ "6-11",
-        is.na(pcl19a_1) & is.na(pcl19a_2) & !is.na(pcl19_3) & pcl19_1 == "Happened to me" ~ "12-19",
-        is.na(pcl19a_1) & is.na(pcl19a_2) & is.na(pcl19a_3) & !is.na(pcl19a_4) & pcl19_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-      ),
-      levels = c("0-5", "6-11", "12-19", "adulthood")
-    )
-  )
-
-pcl <- pcl %>%
-  mutate(pcl1_devperiod = case_when(
-     # TODO Maria, please double check I replace _16 to _2, and seems like this code section is doing the same with above
-    !is.na(pcl1a_1) & pcl1_1 == "Happened to me" ~ "0-5",
-    is.na(pcl1a_1) & !is.na(pcl1a_2) & pcl1_1 == "Happened to me" ~ "6-11",
-    is.na(pcl1a_1) & is.na(pcl1a_2) & !is.na(pcl1_3) & pcl1_1 == "Happened to me" ~ "12-19",
-    is.na(pcl1a_1) & is.na(pcl1a_2) & is.na(pcl1a_3) & !is.na(pcl1a_4) & pcl1_1 == "Happened to me" ~ "adulthood",
-    TRUE ~ NA_character_),
-    pcl2_devperiod = case_when(
-      !is.na(pcl2a_1) & pcl2_1 == "Happened to me" ~ "0-5",
-      is.na(pcl2a_1) & !is.na(pcl2a_2) & pcl2_1 == "Happened to me" ~ "6-11",
-      is.na(pcl2a_1) & is.na(pcl2a_2) & !is.na(pcl2_3) & pcl2_1 == "Happened to me" ~ "12-19",
-      is.na(pcl2a_1) & is.na(pcl2a_2) & is.na(pcl2a_3) & !is.na(pcl2a_4) & pcl2_1 == "Happened to me" ~ "adulthood",
-      TRUE ~ NA_character_),
-      pcl3_devperiod = case_when(
-        !is.na(pcl3a_1) & pcl3_1 == "Happened to me" ~ "0-5",
-        is.na(pcl3a_1) & !is.na(pcl3a_2) & pcl3_1 == "Happened to me" ~ "6-11",
-        is.na(pcl3a_1) & is.na(pcl3a_2) & !is.na(pcl3_3) & pcl3_1 == "Happened to me" ~ "12-19",
-        is.na(pcl3a_1) & is.na(pcl3a_2) & is.na(pcl3a_3) & !is.na(pcl3a_4) & pcl3_1 == "Happened to me" ~ "adulthood",
-        TRUE ~ NA_character_
-  ))
-
-# Happen to me 
-pcl <- pcl %>%
-  mutate(pcl1_yes = if_else(pcl1_1 == "Happened to me", 1, 0, missing = 0),
-           # Maria: i replaced pcl16_yes with pcl2_yes
-         pcl2_yes = if_else(pcl2_1 == "Happened to me", 1, 0, missing = 0),
-         pcl3_yes = if_else(pcl3_1 == "Happened to me", 1, 0, missing = 0),
-         pcl4_yes = if_else(pcl4_1 == "Happened to me", 1, 0, missing = 0),
-         pcl5_yes = if_else(pcl5_1 == "Happened to me", 1, 0, missing = 0),
-         pcl6_yes = if_else(pcl6_1 == "Happened to me", 1, 0, missing = 0),
-         pcl7_yes = if_else(pcl7_1 == "Happened to me", 1, 0, missing = 0),
-         pcl8_yes = if_else(pcl8_1 == "Happened to me", 1, 0, missing = 0),
-         pcl9_yes = if_else(pcl9_1 == "Happened to me", 1, 0, missing = 0),
-         pcl10_yes = if_else(pcl10_1 == "Happened to me", 1, 0, missing = 0),
-         pcl11_yes = if_else(pcl11_1 == "Happened to me", 1, 0, missing = 0),
-         # Maria: i replaced pcl116_1 with pcl12_1
-         pcl12_yes = if_else(pcl12_1 == "Happened to me", 1, 0, missing = 0),
-         pcl13_yes = if_else(pcl13_1 == "Happened to me", 1, 0, missing = 0),
-         pcl14_yes = if_else(pcl14_1 == "Happened to me", 1, 0, missing = 0),
-         pcl15_yes = if_else(pcl15_1 == "Happened to me", 1, 0, missing = 0),
-         pcl16_yes = if_else(pcl16_1 == "Happened to me", 1, 0, missing = 0),
-         pcl17_yes = if_else(pcl17_1 == "Happened to me", 1, 0, missing = 0),
-         pcl16_yes = if_else(pcl16_1 == "Happened to me", 1, 0, missing = 0),
-         pcl19_yes = if_else(pcl19_1 == "Happened to me", 1, 0, missing = 0)
-         )
-# okay here is a basic by time period
-
-pcl <- pcl %>%
-  mutate(
-    across(
-      # had you experienced and how
-      .cols = c(matches("^pcl\\d+_\\d+")),
-      .fns = ~case_when(
-        .x == "Happened to me" ~ "1",
-        .x == "Witnessed it" ~ "1",
-        .x == "Learned about it" ~ "1",
-        .x == "No (did not happen)" ~ "0",
-        .x == "Decline to Answer" ~ "-77",
-        TRUE ~ .x
-      )
-    ),
-    across(
-      .cols = c(pcl1_1, pcl1_2, pcl1_3),
-      .fns = ~case_when(
-        pcl1_77 == "-77" ~ "-77",
-        pcl1_4 == "0" ~ "0",
-        is.na(.x) ~ "0",
-        TRUE ~ .x
-      )
-    ),
-    across(
-    .cols = c(matches("^pcl\\d+a_\\d+")),
-    # if the happened when
-      .fns = ~case_when(
-        .x == "Ages 0-5" ~ "1",
-        # .x == "Ages 6-11" ~ "1",
-        # .x == "Ages 12-19" ~ "1",
-        # .x == "Adulthood" ~ "1",
-        # .x == "Decline to Answer" ~ "-77",
-        TRUE ~ .x
-      )
-    )
   ) %>%
   rename_with(
-    .fn = ~ gsub("pcl(\\d+)_1", "pcl\\1_happen", .),
-    .cols = matches("pcl\\d+_1")
-  )
-  rename(pcl1_happen = pcl1_1) %>%
-  rename(pcl1_witness = pcl1_2) %>%
-  rename(pcl1_learn = pcl1_3) %>%
-  rename(pcl1_0_5 = pcl1a_1) %>%
-  rename(pcl1_)
-  
+    .fn = ~ gsub("pcl(\\d+)_4", "pcl\\1_no", .),
+    .cols = matches("pcl\\d+_4")
+  ) %>%
+  rename_with(
+    .fn = ~ gsub("pcl(\\d+)a_1", "pcl\\1_hapWit_ages_0_5", .),
+    .cols = matches("pcl\\d+a_1")
+  ) %>%
+  rename_with(
+    .fn = ~ gsub("pcl(\\d+)a_2", "pcl\\1_hapWit_ages_6_11", .),
+    .cols = matches("pcl\\d+a_2")
+  ) %>%
+  rename_with(
+    .fn = ~ gsub("pcl(\\d+)a_3", "pcl\\1_hapWit_ages_12_19", .),
+    .cols = matches("pcl\\d+a_3")
+  ) %>%
+  rename_with(
+    .fn = ~ gsub("pcl(\\d+)a_4", "pcl\\1_hapWit_adulthood", .),
+    .cols = matches("pcl\\d+a_4")
+  ) %>%
+  rename_with(
+    .fn = ~ gsub("pcl(\\d+)a_77", "pcl\\1_hapWit_ages_77", .),
+    .cols = matches("pcl\\d+a_77")
+  ) 
 
 
-  # mutate(
-  #   across(
-  #     .cols = everything(),
-  #     .fns = ~case_when(
-  #       .x == "Yes" ~ "1",
-  #       .x == "No" ~ "0",
-  #       
-  #       .x == "1. Hearing" ~ "1",
-  #       .x == "2. Continuance" ~ "2",
-  #       .x == "3. Court Monitoring" ~ "3",
-  #       
-  #       .x == "1. Yes, available and accessed" ~ "1",
-  #       .x == "2. No, available but did not access" ~ "2",
-  #       .x == "3. No, attempted to access but experienced a barrier" ~ "3",
-  #       .x == "4. No, was not aware service was available" ~ "4",
-  #       
-  #       .x == "1. Physical" ~ "1",
-  #       .x == "2. Mental/Psychological" ~ "2",
-  #       .x == "3. Substance Use" ~ "3",
-  #       
-  #       .x == "Don't Know" ~ "-66",
-  #       .x == "Decline to Answer" ~ "-77",
-  #       .x == "5. Decline to answer" ~ "-77",
-  #       TRUE ~ .x
-  #     )
+# fund a more effection way to write these 
+  # mutate(pcl1_dev = combine_columns(., c("pcl1a_1", "pcl1a_2", "pcl1a_3", "pcl1a_4"), sep = ";") )%>%
+  # mutate(pcl1_dev = str_extract(pcl1_dev, "^[^;]+")) %>%
+  # relocate(pcl1_dev, .after = "pcl1a_77") %>%
+  # mutate(pcl2_dev = combine_columns(., c("pcl2a_1", "pcl2a_2", "pcl2a_3", "pcl2a_4"), sep = ";") )%>%
+  # mutate(pcl2_dev = str_extract(pcl2_dev, "^[^;]+")) %>%
+  # relocate(pcl2_dev, .after = "pcl2a_77") %>%
+  # mutate(pcl3_dev = combine_columns(., c("pcl3a_1", "pcl3a_2", "pcl3a_3", "pcl3a_4"), sep = ";") )%>%
+  # mutate(pcl3_dev = str_extract(pcl3_dev, "^[^;]+")) %>%
+  # relocate(pcl3_dev, .after = "pcl3a_77") %>%
+  # mutate(pcl4_dev = combine_columns(., c("pcl4a_1", "pcl4a_2", "pcl4a_3", "pcl4a_4"), sep = ";") )%>%
+  # mutate(pcl4_dev = str_extract(pcl4_dev, "^[^;]+")) %>%
+  # relocate(pcl4_dev, .after = "pcl4a_77") %>%
+  # mutate(pcl5_dev = combine_columns(., c("pcl5a_1", "pcl5a_2", "pcl5a_3", "pcl5a_4"), sep = ";") )%>%
+  # mutate(pcl5_dev = str_extract(pcl5_dev, "^[^;]+")) %>%
+  # relocate(pcl5_dev, .after = "pcl5a_77") %>%
+  # mutate(pcl6_dev = combine_columns(., c("pcl6a_1", "pcl6a_2", "pcl6a_3", "pcl6a_4"), sep = ";") )%>%
+  # mutate(pcl6_dev = str_extract(pcl6_dev, "^[^;]+")) %>%
+  # relocate(pcl6_dev, .after = "pcl6a_77") %>%
+  # mutate(pcl7_dev = combine_columns(., c("pcl7a_1", "pcl7a_2", "pcl7a_3", "pcl7a_4"), sep = ";") )%>%
+  # mutate(pcl7_dev = str_extract(pcl7_dev, "^[^;]+")) %>%
+  # relocate(pcl7_dev, .after = "pcl7a_77") %>%
+  # mutate(pcl8_dev = combine_columns(., c("pcl8a_1", "pcl8a_2", "pcl8a_3", "pcl8a_4"), sep = ";") )%>%
+  # mutate(pcl8_dev = str_extract(pcl8_dev, "^[^;]+")) %>%
+  # relocate(pcl8_dev, .after = "pcl8a_77") %>%
+  # mutate(pcl9_dev = combine_columns(., c("pcl9a_1", "pcl9a_2", "pcl9a_3", "pcl9a_4"), sep = ";") )%>%
+  # mutate(pcl9_dev = str_extract(pcl9_dev, "^[^;]+")) %>%
+  # relocate(pcl9_dev, .after = "pcl9a_77") %>%
+  # mutate(pcl10_dev = combine_columns(., c("pcl10a_1", "pcl10a_2", "pcl10a_3", "pcl10a_4"), sep = ";") )%>%
+  # mutate(pcl10_dev = str_extract(pcl10_dev, "^[^;]+")) %>%
+  # relocate(pcl10_dev, .after = "pcl10a_77") %>%
+  # mutate(pcl11_dev = combine_columns(., c("pcl11a_1", "pcl11a_2", "pcl11a_3", "pcl11a_4"), sep = ";") )%>%
+  # mutate(pcl11_dev = str_extract(pcl11_dev, "^[^;]+")) %>%
+  # relocate(pcl11_dev, .after = "pcl11a_77") %>%
+  # mutate(pcl12_dev = combine_columns(., c("pcl12a_1", "pcl12a_2", "pcl12a_3", "pcl12a_4"), sep = ";") )%>%
+  # mutate(pcl12_dev = str_extract(pcl12_dev, "^[^;]+")) %>%
+  # relocate(pcl12_dev, .after = "pcl12a_77") 
+  # 
+
+# TODO: Maria since we have developed period for combination of happened and witnessed, the following code is irrelevant, please confirm and removed. 
+  #   mutate(
+  #   pcl1_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl1a_1) & pcl1_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl1a_1) & !is.na(pcl1a_2) & pcl1_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl1a_1) & is.na(pcl1a_2) & !is.na(pcl1_3) & pcl1_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl1a_1) & is.na(pcl1a_2) & is.na(pcl1a_3) & !is.na(pcl1a_4) & pcl1_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl2_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl2a_1) & pcl2_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl2a_1) & !is.na(pcl2a_2) & pcl2_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl2a_1) & is.na(pcl2a_2) & !is.na(pcl2_3) & pcl2_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl2a_1) & is.na(pcl2a_2) & is.na(pcl2a_3) & !is.na(pcl2a_4) & pcl2_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl3_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl3a_1) & pcl3_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl3a_1) & !is.na(pcl3a_2) & pcl3_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl3a_1) & is.na(pcl3a_2) & !is.na(pcl3_3) & pcl3_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl3a_1) & is.na(pcl3a_2) & is.na(pcl3a_3) & !is.na(pcl3a_4) & pcl3_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl4_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl4a_1) & pcl4_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl4a_1) & !is.na(pcl4a_2) & pcl4_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl4a_1) & is.na(pcl4a_2) & !is.na(pcl4_3) & pcl4_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl4a_1) & is.na(pcl4a_2) & is.na(pcl4a_3) & !is.na(pcl4a_4) & pcl4_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl5_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl5a_1) & pcl5_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl5a_1) & !is.na(pcl5a_2) & pcl5_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl5a_1) & is.na(pcl5a_2) & !is.na(pcl5_3) & pcl5_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl5a_1) & is.na(pcl5a_2) & is.na(pcl5a_3) & !is.na(pcl5a_4) & pcl5_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl6_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl6a_1) & pcl6_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl6a_1) & !is.na(pcl6a_2) & pcl6_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl6a_1) & is.na(pcl6a_2) & !is.na(pcl6_3) & pcl6_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl6a_1) & is.na(pcl6a_2) & is.na(pcl6a_3) & !is.na(pcl6a_4) & pcl6_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl7_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl7a_1) & pcl7_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl7a_1) & !is.na(pcl7a_2) & pcl7_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl7a_1) & is.na(pcl7a_2) & !is.na(pcl7_3) & pcl7_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl7a_1) & is.na(pcl7a_2) & is.na(pcl7a_3) & !is.na(pcl7a_4) & pcl7_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl8_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl8a_1) & pcl8_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl8a_1) & !is.na(pcl8a_2) & pcl8_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl8a_1) & is.na(pcl8a_2) & !is.na(pcl8_3) & pcl8_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl8a_1) & is.na(pcl8a_2) & is.na(pcl8a_3) & !is.na(pcl8a_4) & pcl8_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl9_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl9a_1) & pcl9_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl9a_1) & !is.na(pcl9a_2) & pcl9_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl9a_1) & is.na(pcl9a_2) & !is.na(pcl9_3) & pcl9_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl9a_1) & is.na(pcl9a_2) & is.na(pcl9a_3) & !is.na(pcl9a_4) & pcl9_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl10_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl10a_1) & pcl10_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl10a_1) & !is.na(pcl10a_2) & pcl10_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl10a_1) & is.na(pcl10a_2) & !is.na(pcl10_3) & pcl10_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl10a_1) & is.na(pcl10a_2) & is.na(pcl10a_3) & !is.na(pcl10a_4) & pcl10_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl11_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl11a_1) & pcl11_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl11a_1) & !is.na(pcl11a_2) & pcl11_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl11a_1) & is.na(pcl11a_2) & !is.na(pcl11_3) & pcl11_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl11a_1) & is.na(pcl11a_2) & is.na(pcl11a_3) & !is.na(pcl11a_4) & pcl11_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl12_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl12a_1) & pcl12_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl12a_1) & !is.na(pcl12a_2) & pcl12_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl12a_1) & is.na(pcl12a_2) & !is.na(pcl12_3) & pcl12_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl12a_1) & is.na(pcl12a_2) & is.na(pcl12a_3) & !is.na(pcl12a_4) & pcl12_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl13_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl13a_1) & pcl13_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl13a_1) & !is.na(pcl13a_2) & pcl13_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl13a_1) & is.na(pcl13a_2) & !is.na(pcl13_3) & pcl13_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl13a_1) & is.na(pcl13a_2) & is.na(pcl13a_3) & !is.na(pcl13a_4) & pcl13_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl14_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl14a_1) & pcl14_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl14a_1) & !is.na(pcl14a_2) & pcl14_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl14a_1) & is.na(pcl14a_2) & !is.na(pcl14_3) & pcl14_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl14a_1) & is.na(pcl14a_2) & is.na(pcl14a_3) & !is.na(pcl14a_4) & pcl14_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl15_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl15a_1) & pcl15_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl15a_1) & !is.na(pcl15a_2) & pcl15_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl15a_1) & is.na(pcl15a_2) & !is.na(pcl15_3) & pcl15_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl15a_1) & is.na(pcl15a_2) & is.na(pcl15a_3) & !is.na(pcl15a_4) & pcl15_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl16_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl16a_1) & pcl16_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl16a_1) & !is.na(pcl16a_2) & pcl16_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl16a_1) & is.na(pcl16a_2) & !is.na(pcl16_3) & pcl16_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl16a_1) & is.na(pcl16a_2) & is.na(pcl16a_3) & !is.na(pcl16a_4) & pcl16_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl17_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl17a_1) & pcl17_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl17a_1) & !is.na(pcl17a_2) & pcl17_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl17a_1) & is.na(pcl17a_2) & !is.na(pcl17_3) & pcl17_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl17a_1) & is.na(pcl17a_2) & is.na(pcl17a_3) & !is.na(pcl17a_4) & pcl17_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   #TODO: Maria please double check I changed 16 to 18 
+  #   pcl18_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl18a_1) & pcl18_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl18a_1) & !is.na(pcl18a_2) & pcl18_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl18a_1) & is.na(pcl18a_2) & !is.na(pcl18_3) & pcl18_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl18a_1) & is.na(pcl18a_2) & is.na(pcl18a_3) & !is.na(pcl18a_4) & pcl18_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
+  #   ),
+  #   pcl19_devperiod = factor(
+  #     case_when(
+  #       !is.na(pcl19a_1) & pcl19_1 == "Happened to me" ~ "0-5",
+  #       is.na(pcl19a_1) & !is.na(pcl19a_2) & pcl19_1 == "Happened to me" ~ "6-11",
+  #       is.na(pcl19a_1) & is.na(pcl19a_2) & !is.na(pcl19_3) & pcl19_1 == "Happened to me" ~ "12-19",
+  #       is.na(pcl19a_1) & is.na(pcl19a_2) & is.na(pcl19a_3) & !is.na(pcl19a_4) & pcl19_1 == "Happened to me" ~ "adulthood",
+  #       TRUE ~ NA_character_
+  #     ),
+  #     levels = c("0-5", "6-11", "12-19", "adulthood")
   #   )
-  # ) 
+  # )
 
   
+  
+  
+  
+# TODO: Maria, I think below are duplicated code, if so, you can go ahead remove them. 
+# pcl <- pcl %>%
+#   mutate(pcl1_devperiod = case_when(
+#      # TODO Maria, please double check I replace _16 to _2, and seems like this code section is doing the same with above
+#     !is.na(pcl1a_1) & pcl1_1 == "Happened to me" ~ "0-5",
+#     is.na(pcl1a_1) & !is.na(pcl1a_2) & pcl1_1 == "Happened to me" ~ "6-11",
+#     is.na(pcl1a_1) & is.na(pcl1a_2) & !is.na(pcl1_3) & pcl1_1 == "Happened to me" ~ "12-19",
+#     is.na(pcl1a_1) & is.na(pcl1a_2) & is.na(pcl1a_3) & !is.na(pcl1a_4) & pcl1_1 == "Happened to me" ~ "adulthood",
+#     TRUE ~ NA_character_),
+#     pcl2_devperiod = case_when(
+#       !is.na(pcl2a_1) & pcl2_1 == "Happened to me" ~ "0-5",
+#       is.na(pcl2a_1) & !is.na(pcl2a_2) & pcl2_1 == "Happened to me" ~ "6-11",
+#       is.na(pcl2a_1) & is.na(pcl2a_2) & !is.na(pcl2_3) & pcl2_1 == "Happened to me" ~ "12-19",
+#       is.na(pcl2a_1) & is.na(pcl2a_2) & is.na(pcl2a_3) & !is.na(pcl2a_4) & pcl2_1 == "Happened to me" ~ "adulthood",
+#       TRUE ~ NA_character_),
+#       pcl3_devperiod = case_when(
+#         !is.na(pcl3a_1) & pcl3_1 == "Happened to me" ~ "0-5",
+#         is.na(pcl3a_1) & !is.na(pcl3a_2) & pcl3_1 == "Happened to me" ~ "6-11",
+#         is.na(pcl3a_1) & is.na(pcl3a_2) & !is.na(pcl3_3) & pcl3_1 == "Happened to me" ~ "12-19",
+#         is.na(pcl3a_1) & is.na(pcl3a_2) & is.na(pcl3a_3) & !is.na(pcl3a_4) & pcl3_1 == "Happened to me" ~ "adulthood",
+#         TRUE ~ NA_character_
+#   ))
+
+# Happen to me 
+# pcl <- pcl %>%
+#   mutate(pcl1_yes = if_else(pcl1_1 == "Happened to me", 1, 0, missing = 0),
+#            # Maria: i replaced pcl16_yes with pcl2_yes
+#          pcl2_yes = if_else(pcl2_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl3_yes = if_else(pcl3_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl4_yes = if_else(pcl4_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl5_yes = if_else(pcl5_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl6_yes = if_else(pcl6_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl7_yes = if_else(pcl7_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl8_yes = if_else(pcl8_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl9_yes = if_else(pcl9_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl10_yes = if_else(pcl10_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl11_yes = if_else(pcl11_1 == "Happened to me", 1, 0, missing = 0),
+#          # Maria: i replaced pcl116_1 with pcl12_1
+#          pcl12_yes = if_else(pcl12_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl13_yes = if_else(pcl13_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl14_yes = if_else(pcl14_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl15_yes = if_else(pcl15_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl16_yes = if_else(pcl16_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl17_yes = if_else(pcl17_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl16_yes = if_else(pcl16_1 == "Happened to me", 1, 0, missing = 0),
+#          pcl19_yes = if_else(pcl19_1 == "Happened to me", 1, 0, missing = 0)
+#          )
+# okay here is a basic by time period
 ```
 
 ## Merge
